test: Add controller and service tests